# .xlibrary

./: .gitignore  README.md  index.html  linear_test.py  main.py  pyproject.toml  requirements.txt  test_sgd.py
izlearn/: linear_mode.py  linear_model.py  metrics.py  preprocessing.py
test/: test.py
xtorch/: __init__.py  _utils.py  activation.py  arithmetic.py  backend.py  comparison.py  creation.py  elementwise.py  linalg.py  logical.py  manipulation.py  matrix.py  multi_class.py  nn.py  random.py  reduction.py  tensor.py
